[package]
name = "wban-total-supply-monitor"
version = "0.1.0"
authors = ["Wrap That Potassium <wrap-that-potassium@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.16.0"
ethabi = "14.0.0"
ethabi-contract = "11.0.0"
ethabi-derive = "14.0.0"
hex-literal = "0.3.1"
reqwest = { version = "0.11.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.48"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = { version = "1.0.64" }
rust_decimal = { version = "1.13.0" }
error-chain = "0.12.4"
