[package]
name = "wban-total-supply-monitor"
version = "0.2.0"
authors = ["Wrap That Potassium <wrap-that-potassium@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
#ethers = { git = "https://github.com/gakonst/ethers-rs" }
redis = "0.21.4"
ethers = "0.2.2"
reqwest = { version = "0.11.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.48"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = { version = "1.0.64" }
rust_decimal = { version = "1.13.0" }
anyhow = "1.0"
thiserror = "1.0"
teloxide = { version = "0.5.2", features = ["macros", "auto-send"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
